@@ -1,0 +1,2 @@
+openal-config
+openal.pc
